syntax = "proto3";

option csharp_namespace = "GrpcServer";

import "google/protobuf/timestamp.proto";

service ChatService {
  rpc ChatStream (stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage {
  string user = 1;
  string message = 2;
}
